force-app/main/default/objects/Americord_Settings__c/Americord_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Americord Settings</label>
</CustomObject>