force-app/main/default/objects/Americord_Settings__c/fields/Ambassador_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Account_ID__c</fullName>
    <label>Ambassador Account ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>