force-app/main/default/objects/Americord_Settings__c/fields/Bad_Bot_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Bad_Bot_Lead_Owner__c</fullName>
    <description>This is the ID of the owner for bad/bot leads.</description>
    <label>Bad/Bot Lead Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>