force-app/main/default/objects/Americord_Settings__c/fields/Bypass_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will allow the validation rules to be bypassed.</description>
    <label>Bypass Validation Rule</label>
    <type>Checkbox</type>
</CustomField>