force-app/main/default/objects/Americord_Settings__c/fields/Current_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Current_Price_Book__c</fullName>
    <label>Current Price Book</label>
    <length>100</length>
    <type>Text</type>
</CustomField>