force-app/main/default/objects/Americord_Settings__c/fields/Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>