force-app/main/default/objects/Americord_Settings__c/fields/Error_Log_Email_1__c.field-meta.xml
<CustomField>
    <fullName>Error_Log_Email_1__c</fullName>
    <label>Error Log Email 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>